Comments: - Fixed spacing issue with Tech skills subtitles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4366,5 +4366,5 @@ ul li:before {
 .subtitle {
 	font-size: 1em;
 	text-align: center;
-	padding-top: 3em;
+	padding-top: 1.5em;
 }
